--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,15 @@ moviepy==1.0.3
 numpy==1.26.1
 opencv-python==4.8.1.78
 scipy==1.11.3
---extra-index-url https://download.pytorch.org/whl/cu121
-torch==2.1.0
-torchaudio==2.1.0
-torchvision==0.16.0
+
+# for CUDA
+#--extra-index-url https://download.pytorch.org/whl/cu121
+#torch==2.1.0
+#torchaudio==2.1.0
+#torchvision==0.16.0
+
+# for ROCm
+--index-url https://download.pytorch.org/whl/rocm6.1
+torch
+torchaudio
+torchvision
